# An-lisis-de-sentimiento-con-NLP3

./: .gitignore  cleaned_games.ipynb  cleaned_reviews.ipynb  funciones.py  games.pkl  itemss.ipynb  lector.ipynb  main.py  pyproject.toml  requirements.txt
